crates/fastc/tests/errors/type_mismatch.fc
// Type mismatch test case
fn main() -> i32 {
    let x: bool = 42;
    return x;
}
